# gana

./: .gitignore  Cargo.toml  LICENSE  README.md  TODO.md  install.sh
.github/workflows/: auto-tag.yml  ci.yml  release.yml
gana-branding/: branding.txt  ganesha_icon.txt  help_header.txt  icon_large.txt  icon_medium.txt  icon_small.txt  icon_startup.txt  icon_xl.txt  preview_fallback.txt  startup_screen.txt  startup_v1_large.txt  startup_v2_sidebyside.txt  startup_v3_centered.txt  startup_v4_compact.txt
src/: main.rs  update.rs
src/app/: help.rs  mod.rs
src/cmd/: mod.rs
src/config/: mod.rs  state.rs
src/daemon/: mod.rs  platform.rs
src/keys/: mod.rs
src/log/: mod.rs
src/session/: instance.rs  mod.rs  storage.rs
src/session/git/: diff.rs  mod.rs  util.rs  worktree.rs  worktree_branch.rs  worktree_git.rs  worktree_ops.rs
src/session/tmux/: mod.rs  pty.rs
src/ui/: consts.rs  diff.rs  err.rs  list.rs  menu.rs  mod.rs  preview.rs  tabbed_window.rs
src/ui/overlay/: confirmation.rs  mod.rs  restart.rs  text_input.rs  text_overlay.rs
tests/: integration.rs
