[package]
name = "gana"
version = "0.1.0"
edition = "2024"
description = "Orchestrate your AI agent teams — manage multiple Claude Code sessions in parallel"
repository = "https://github.com/daern91/gana"
keywords = ["cli", "tui", "ai", "claude", "agent"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
license = "MIT"

[[bin]]
name = "gana"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }

# TUI
ratatui = { version = "0.30", features = ["crossterm"] }
crossterm = { version = "0.29", features = ["event-stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# PTY management
portable-pty = "0.9"

# Lightweight regex (no proc macros, fast compile)
regex-lite = "0.1"

# Filesystem / directories
dirs = "6"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# SHA256 for status monitoring
sha2 = "0.10"

# Platform-specific process management
nix = { version = "0.29", features = ["signal", "process", "term"] }

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
assert_cmd = "2"
predicates = "3"
